<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Administrator extends User
{
    //
}
